[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/GameOver.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -90.0
margin_right = 144.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 280.0
margin_bottom = 172.0

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Mock" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 280.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 46 )
text = "Don't worry, there's always next time. Especially for immortals like yourself"
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 280.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 44 )
alignment = 1

[node name="CauseOfDeath" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_top = 15.0
margin_right = 173.0
margin_bottom = 29.0
text = "Cause of Death.: "

[node name="CauseOfDeathWas" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_top = 15.0
margin_right = 215.0
margin_bottom = 29.0
text = "Death"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 280.0
margin_bottom = 142.0
alignment = 1

[node name="TryAgain" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 44.0
margin_right = 120.0
margin_bottom = 20.0
text = "Try Again?"

[node name="ReturnMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 124.0
margin_right = 235.0
margin_bottom = 20.0
text = "Return to Menu"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/ReturnMenu" to="." method="_on_ReturnMenu_pressed"]
